# quick-stock

./: .env.example  .gitignore  pyproject.toml  requirements.txt  ruff.toml
accounts/: forms.py  managers.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/templates/accounts/: login.html  register.html
config/: settings.py  settings_production.py  urls.py
core/: mixins.py  views.py
core/templates/core/: base.html  index.html
core/templates/core/components/: css.html  footer.html  main_header.html  scripts.html
inventory/: forms.py  managers.py  models.py  urls.py  views.py
inventory/migrations/: 0001_initial.py  0002_product_image_product_user.py  0003_alter_product_created_at_alter_product_name_and_more.py  0004_alter_product_price.py
inventory/templates/inventory/: product_delete.html  product_form.html  product_list.html
inventory/templates/inventory/components/: search.html  sort-by.html
inventory/templates/inventory/partials/: product_row.html
orders/: apps.py  models.py  signals.py  urls.py  views.py
orders/migrations/: 0001_initial.py
orders/templates/orders/: order_create.html  order_list.html
orders/templates/orders/partials/: product_search_results.html
